--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -3,4 +3,4 @@ RUN apk add -U git
 RUN go get -u -v github.com/wzshiming/pic2ascii/cmd/pic2ascii
 
 FROM alpine:3.7
-COPY --from=builder $GOBIN/pic2ascii /usr/local/bin/pic2ascii
+COPY --from=builder /go/bin/pic2ascii /usr/local/bin/
