--- a/.travis.yml
+++ b/.travis.yml
@@ -4,20 +4,20 @@ notifications:
   email: false
 jobs:
   include:
-  - go: 1.11.x
-    stage: deploy
-    go_import_path: github.com/wzshiming/pic2ascii
-    install: skip
-    script: skip
-    before_deploy:
-    - BASENAME=pic2ascii ./build_all.bash
-    deploy:
-      provider: releases
-      api_key: $CI_TOKEN
-      file_glob: true
-      file: release/*
-      skip_cleanup: true
-      on:
-        repo: wzshiming/pic2ascii
-        branch: master
-        tags: true
+    - go: 1.13.x
+      stage: deploy
+      go_import_path: github.com/wzshiming/pic2ascii
+      install: skip
+      script: skip
+      before_deploy:
+        - BASENAME=pic2ascii bash -c "$(curl -fsSL https://github.com/wzshiming/my-shell/raw/master/build_all.bash)"
+      deploy:
+        provider: releases
+        api_key: $CI_TOKEN
+        file_glob: true
+        file: release/*
+        skip_cleanup: true
+        on:
+          repo: wzshiming/pic2ascii
+          branch: master
+          tags: true
